Fix modal and images upload

--- a/templates/modals/browse.html
+++ b/templates/modals/browse.html
@@ -10,7 +10,7 @@
       <div id="clickHere">
           or click here..
           <form method="POST" action="{{action}}" enctype="multipart/form-data">
-            <input type="hidden" name="shop" value="feliver2.myshopify.com">
+            <input type="hidden" name="shop" value="{{shop}}">
             <input type="file" name="image_feliver">
             <input type="submit" value="Upload">
           </form>
